--- a/ImageFeed/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/ImageFeed/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="gua-q1-QsB"/>
+                        <segue destination="DSA-y4-EWn" kind="relationship" relationship="viewControllers" id="gua-q1-QsB"/>
                         <segue destination="s1Q-pC-rhY" kind="relationship" relationship="viewControllers" id="YAg-ds-VbD"/>
                     </connections>
                 </tabBarController>
@@ -180,6 +180,7 @@
                                             <outlet property="cellImage" destination="9P7-Ln-GHQ" id="qiN-HW-aoQ"/>
                                             <outlet property="dateLabel" destination="MeI-sh-8ba" id="rR4-pH-Opk"/>
                                             <outlet property="likeButton" destination="Z75-si-0K5" id="Sfq-YP-pqS"/>
+                                            <segue destination="vz9-bV-kJI" kind="show" id="iRL-2h-eVV"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -198,12 +199,67 @@
                             <constraint firstItem="ve3-8B-qKE" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="zJn-qF-M3A"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="tfM-mC-I3h"/>
+                    <navigationItem key="navigationItem" id="ZnW-DM-Fst"/>
                     <connections>
                         <outlet property="tableView" destination="ve3-8B-qKE" id="zoB-jr-z8R"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1008.3969465648854" y="-2.1126760563380285"/>
+        </scene>
+        <!--Single Image View Controller-->
+        <scene sceneID="bgU-x8-7y2">
+            <objects>
+                <viewController id="vz9-bV-kJI" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZJi-gD-vwH">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="gbE-O0-0sx">
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                                <color key="backgroundColor" name="Color1"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="2Tu-rX-j4F"/>
+                        <color key="backgroundColor" name="Color1"/>
+                        <constraints>
+                            <constraint firstItem="gbE-O0-0sx" firstAttribute="top" secondItem="2Tu-rX-j4F" secondAttribute="top" id="M2R-83-8yo"/>
+                            <constraint firstItem="2Tu-rX-j4F" firstAttribute="bottom" secondItem="gbE-O0-0sx" secondAttribute="bottom" id="RGa-d0-wBO"/>
+                            <constraint firstItem="gbE-O0-0sx" firstAttribute="leading" secondItem="2Tu-rX-j4F" secondAttribute="leading" id="XO1-8s-Xp6"/>
+                            <constraint firstItem="2Tu-rX-j4F" firstAttribute="trailing" secondItem="gbE-O0-0sx" secondAttribute="trailing" id="haZ-aA-PR9"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="P31-ey-MN6"/>
+                    <connections>
+                        <outlet property="imageView" destination="gbE-O0-0sx" id="3Wk-s7-zU7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dmO-bV-TR0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2112" y="14"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Q0Q-oy-byU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DSA-y4-EWn" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="tfM-mC-I3h"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RJK-Su-8Uw">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <navigationBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="Color1"/>
+                        </navigationBarAppearance>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="SQs-6Z-BPO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Otg-o1-NIc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="81.679389312977094" y="-2.1126760563380285"/>
         </scene>
