--- a/ImageFeed/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/ImageFeed/Base.lproj/Main.storyboard
@@ -24,8 +24,8 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="DSA-y4-EWn" kind="relationship" relationship="viewControllers" id="gua-q1-QsB"/>
                         <segue destination="s1Q-pC-rhY" kind="relationship" relationship="viewControllers" id="YAg-ds-VbD"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="jc7-Y8-jVt"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FlR-vw-QIS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -180,7 +180,6 @@
                                             <outlet property="cellImage" destination="9P7-Ln-GHQ" id="qiN-HW-aoQ"/>
                                             <outlet property="dateLabel" destination="MeI-sh-8ba" id="rR4-pH-Opk"/>
                                             <outlet property="likeButton" destination="Z75-si-0K5" id="Sfq-YP-pqS"/>
-                                            <segue destination="vz9-bV-kJI" kind="show" id="iRL-2h-eVV"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -199,9 +198,11 @@
                             <constraint firstItem="ve3-8B-qKE" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="zJn-qF-M3A"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="0Da-4X-1qS"/>
                     <navigationItem key="navigationItem" id="ZnW-DM-Fst"/>
                     <connections>
                         <outlet property="tableView" destination="ve3-8B-qKE" id="zoB-jr-z8R"/>
+                        <segue destination="vz9-bV-kJI" kind="presentation" identifier="ShowSingleImage" id="ofU-GF-TV7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -211,23 +212,41 @@
         <!--Single Image View Controller-->
         <scene sceneID="bgU-x8-7y2">
             <objects>
-                <viewController id="vz9-bV-kJI" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="vz9-bV-kJI" customClass="SingleImageViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZJi-gD-vwH">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="gbE-O0-0sx">
-                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" name="Color1"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q4Z-gZ-bIK">
+                                <rect key="frame" x="8" y="8" width="24" height="48"/>
+                                <color key="backgroundColor" name="Color1"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="bhv-YH-tB9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="Image">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTapBackButton" destination="vz9-bV-kJI" eventType="touchUpInside" id="WhO-RS-2u5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="2Tu-rX-j4F"/>
                         <color key="backgroundColor" name="Color1"/>
                         <constraints>
-                            <constraint firstItem="gbE-O0-0sx" firstAttribute="top" secondItem="2Tu-rX-j4F" secondAttribute="top" id="M2R-83-8yo"/>
-                            <constraint firstItem="2Tu-rX-j4F" firstAttribute="bottom" secondItem="gbE-O0-0sx" secondAttribute="bottom" id="RGa-d0-wBO"/>
-                            <constraint firstItem="gbE-O0-0sx" firstAttribute="leading" secondItem="2Tu-rX-j4F" secondAttribute="leading" id="XO1-8s-Xp6"/>
-                            <constraint firstItem="2Tu-rX-j4F" firstAttribute="trailing" secondItem="gbE-O0-0sx" secondAttribute="trailing" id="haZ-aA-PR9"/>
+                            <constraint firstItem="2Tu-rX-j4F" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Q4Z-gZ-bIK" secondAttribute="trailing" symbolic="YES" id="3Hp-g0-IoQ"/>
+                            <constraint firstAttribute="bottom" secondItem="gbE-O0-0sx" secondAttribute="bottom" id="5XU-Nl-OpG"/>
+                            <constraint firstAttribute="trailing" secondItem="gbE-O0-0sx" secondAttribute="trailing" id="DHK-Qc-MSm"/>
+                            <constraint firstItem="gbE-O0-0sx" firstAttribute="top" secondItem="ZJi-gD-vwH" secondAttribute="top" id="adA-rZ-nle"/>
+                            <constraint firstItem="Q4Z-gZ-bIK" firstAttribute="leading" secondItem="2Tu-rX-j4F" secondAttribute="leading" constant="8" id="cpq-QC-Zpq"/>
+                            <constraint firstItem="Q4Z-gZ-bIK" firstAttribute="top" secondItem="2Tu-rX-j4F" secondAttribute="top" constant="8" id="iaN-qg-BZj"/>
+                            <constraint firstItem="gbE-O0-0sx" firstAttribute="leading" secondItem="ZJi-gD-vwH" secondAttribute="leading" id="pgk-mb-rW9"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="P31-ey-MN6"/>
@@ -237,40 +256,17 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dmO-bV-TR0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2112" y="14"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Q0Q-oy-byU">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DSA-y4-EWn" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="tfM-mC-I3h"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RJK-Su-8Uw">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <navigationBarAppearance key="standardAppearance">
-                            <color key="backgroundColor" name="Color1"/>
-                        </navigationBarAppearance>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="SQs-6Z-BPO"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Otg-o1-NIc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="81.679389312977094" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="2110.6870229007632" y="13.380281690140846"/>
         </scene>
     </scenes>
     <resources>
         <image name="0" width="1600" height="1059"/>
         <image name="Avatar" width="35" height="35"/>
-        <image name="Logout" width="6.6666665077209473" height="7.3333334922790527"/>
+        <image name="Image" width="24" height="24"/>
+        <image name="Logout" width="20" height="22"/>
         <image name="like_button_off" width="42" height="42"/>
-        <image name="tab_editorial_active" width="25.333333969116211" height="16.333333969116211"/>
-        <image name="tab_profile_active" width="25.333333969116211" height="16.333333969116211"/>
+        <image name="tab_editorial_active" width="76" height="49"/>
+        <image name="tab_profile_active" width="76" height="49"/>
         <namedColor name="Color">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
